[gd_scene load_steps=2 format=3 uid="uid://bossrewardpopup001"]

[ext_resource type="Script" path="res://ui/boss/boss_reward_popup.gd" id="1_boss_reward_popup"]

[node name="BossRewardPopup" type="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
script = ExtResource("1_boss_reward_popup")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
offset_left = -200.0
offset_top = -108.0
offset_right = 200.0
offset_bottom = 108.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -90.0
offset_right = 180.0
offset_bottom = 90.0

[node name="RewardIcon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5

[node name="BossNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "BOSS DEFEATED!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 0.85, 0, 1)

[node name="RewardDescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 0.85, 0, 1)

[node name="UnlockInfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_colors/font_outline_color = Color(0.1, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 0.85, 0, 1)

[node name="ClaimButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Claim Reward"
